# goldfish

./: .coverage  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  PROVIDERS.md  README.md  REVIEW_PHASE3_METRICS_API.md  ROADMAP.md  SECURITY.md  build_gpu_v3.py  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GCP_SETUP.md  GETTING_STARTED.md  GETTING_STARTED_KING.md  INDEX.md  NEWEXPMODEL_SPEC.md  PUBLIC_RELEASE_CHECKLIST.md  implementation_plan.md  state-machine-implementation.md  state-machine-spec-formal.md  state-machine-spec.md  svs.md  system_design.md
docs/archive/: ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_REVIEW.md  CLOUD_ABSTRACTION.md  DOCS_AUDIT_REPORT.md  a_real_project_issues_example.md  state-machine-spec.md  svs.md
docs/de-googlify/: CHECKLIST.md
docs/specs/: datasource-metadata.md
goldfish-rust/: Cargo.toml  README.md
goldfish-rust/src/: error.rs  lib.rs
goldfish-rust/src/config/: mod.rs
goldfish-rust/src/io/: mod.rs  npy.rs  npz.rs  path.rs
goldfish-rust/src/logging/: mod.rs
goldfish-rust/src/schema/: mod.rs
goldfish-rust/src/stats/: mod.rs
goldfish-rust/tests/: integration_test.rs
infra/: _launch.py  base.Dockerfile  build_experiment.sh  create_experiment.py  create_golden_snapshot.sh  create_run.py  experiment.Dockerfile  gcp.yaml  resource_launcher.py  stage_catalog.py  start_run.py
legacy_infra/: __init__.py  build_and_push_docker.sh  build_experiment.sh  create_golden_snapshot.sh  create_run.py  image_rebuild.py  images.yaml  job_loader.py  run_registry.py  secrets.yaml  sinks.yaml  start_run.py  startup_builder.py  storage_bridge.py
references/: ai_discussion_journal.md  ml_platform_architecture_v2.md  ml_platform_implementation_brief.md
scripts/: cleanup_orphaned_instances.sh  validate_state_machine.py
src/goldfish/: __init__.py  __main__.py  config.py  config_validation.py  context.py  daemon.py  errors.py  init.py  mcp_proxy.py  models.py  pre_run_review.py  server.py  server_core.py  utils.py  validation.py  web_server.py
tests/: conftest.py  test_api_completeness.py  test_cancel_job.py  test_cascading_failures.py  test_concurrent.py  test_config.py  test_database.py  test_dataset_registry.py  test_diff.py  test_docker_builder.py  test_e2e_pipeline_execution.py  test_e2e_workflows.py  test_error_handling.py  test_error_surfacing.py  test_exporter_security.py  test_gce_config.py  test_gce_launcher.py  test_gce_profiles.py  test_gcs_failures.py  test_git_integration.py  test_goldfish_io.py  test_init.py  test_job_conversion.py  test_job_logs.py  test_launcher.py  test_lineage_manager.py  test_lineage_tracker.py  test_list_snapshots.py  test_local_executor.py  test_pipeline_executor.py  test_pipeline_parser.py  test_profile_integration.py  test_resource_launcher.py  test_rollback.py  test_run_job_inputs.py  test_security_path_validation.py  test_security_validation.py  test_server_di.py  test_server_validation.py  test_source_lineage.py  (+11 more)
tests/contracts/: __init__.py  test_ci_import_linter_step.py  test_import_linter_config.py  test_import_linter_enforcement.py  test_import_linter_makefile.py  test_protocol_signatures.py  test_run_backend.py  test_settings.py  test_sqlite_stores.py  test_stage_run_context.py  test_stage_run_store.py  test_storage_uri_roundtrip.py  test_workspace_store.py
tests/deluxe/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  mcp_client_orchestrator.py  run_deluxe_tests.sh  run_test.sh  setup_claude.sh  test_gce_e2e_full.py  test_mcp_tools.sh  test_output.txt
tests/e2e/: __init__.py  test_build_context_hashing.py  test_e2e_cloud_abstraction.py  test_e2e_pipeline_execution.py  test_e2e_workflows.py  test_import_boundaries.py  test_settings_injection.py  test_stage_execution_protocol_stores.py  test_structured_logging_correlation.py
tests/integration/: __init__.py  test_api_completeness.py  test_backup_integration.py  test_cancel_job.py  test_cascading_failures.py  test_checkpoint_versioning.py  test_cloud_integration.py  test_concurrent.py  test_config.py  test_config_validation.py  test_copy_mounting.py  test_daemon_proxy.py  test_daemon_race_condition.py  test_database.py  test_dataset_registry.py  test_delete_tools.py  test_docker_builder.py  test_error_handling.py  test_error_surfacing.py  test_execution_tools_consolidated.py  test_exporter_security.py  test_gce_launcher.py  test_gcs_failures.py  test_git_divergence.py  test_git_integration.py  test_git_namespacing.py  test_goldfish_io.py  test_infra_tools.py  test_init.py  test_input_resolution_freshness.py  test_input_resolution_regression.py  test_launcher.py  test_lineage_improvements_integration.py  test_lineage_manager.py  test_lineage_queries.py  test_lineage_tracker.py  test_local_executor.py  test_metadata_primary_exit_code.py  test_metrics_api.py  test_per_workspace_state.py  (+32 more)
tests/rct/: conftest.py  test_rct_exit_code.py  test_rct_gce.py  test_rct_gcs.py  test_rct_local.py  test_rct_metadata.py
tests/unit/: __init__.py  test_adapter_factory.py  test_backup_db.py  test_backup_manager.py  test_base_image_manager.py  test_base_image_manager_protocol.py  test_base_image_versions.py  test_base_images.py  test_capacity_wait.py  test_compare_runs_tool.py  test_config.py  test_config_hash.py  test_database_trends.py  test_delete_workspace_worktree.py  test_docker_builder_content_hash.py  test_docker_builds_db.py  test_docker_exit_125_retry.py  test_execution_tools.py  test_gce_config.py  test_gce_launcher.py  test_gce_profiles.py  test_gcp_metadata_bus.py  test_get_current_best_bare_tag.py  test_get_run_metrics_tool.py  test_get_run_tool.py  test_gpu_container_race.py  test_image_versioning.py  test_inspect_run_tool.py  test_inspect_workspace_tool.py  test_instance_controller.py  test_io.py  (+58 more)
video/: README.md  package-lock.json  package.json  tsconfig.json
(+356 files in other folders)
