[project]
name = "goldfish"
version = "0.1.0"
description = "MCP server for ML experimentation - solves the goldfish memory problem for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-logging-loki>=0.3.1",
    "httpx>=0.27.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.1",
    "ruff>=0.8.4",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.scripts]
goldfish = "goldfish.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldfish"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
addopts = "--strict-markers --tb=short"
markers = [
    "slow: Tests that take more than 10 seconds",
    "deluxe_gce: Deluxe E2E tests with real GCE execution (opt-in, requires cloud resources)",
]

[tool.coverage.run]
source = ["src/goldfish"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests (sometimes needed for fixtures)
