[project]
name = "goldfish-ml"
version = "0.3.13"
description = "MCP server for ML experimentation - solves the goldfish memory problem for AI agents"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Luka Crnkovic-Friis"},
]
keywords = ["ml", "experimentation", "ml-ops", "mcp", "ai-agents", "reproducibility", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-logging-loki>=0.3.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.16.0",
    "meerkat-sdk>=0.4.12",
]

[project.urls]
Homepage = "https://github.com/lukacf/goldfish"
Documentation = "https://github.com/lukacf/goldfish/blob/main/docs/INDEX.md"
Repository = "https://github.com/lukacf/goldfish.git"
Issues = "https://github.com/lukacf/goldfish/issues"
Changelog = "https://github.com/lukacf/goldfish/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.1",
    "import-linter>=2.0",
    "pip-audit>=2.7",
    "numpy>=1.24",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.1",
    "import-linter>=2.0",
    "pip-audit>=2.7",
    "ruff>=0.8.4",
    "mypy>=1.10",
    "pre-commit>=3.5",
]
wandb = [
    "wandb>=0.16.0",
]

[project.scripts]
goldfish = "goldfish.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldfish"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 30
addopts = "--strict-markers --tb=short"
markers = [
    "slow: Tests that take more than 10 seconds",
    "deluxe_gce: Deluxe E2E tests with real GCE execution (opt-in, requires cloud resources)",
    "requires_docker: Tests requiring Docker daemon to be running",
]

[tool.coverage.run]
source = ["src/goldfish"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "goldfish.config.*",
    "goldfish.db.protocols",
    "goldfish.db.sqlite.*",
    "goldfish.jobs.phases.*",
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests (sometimes needed for fixtures)

[tool.importlinter]
root_packages = ["goldfish"]

[[tool.importlinter.contracts]]
name = "core-no-api-surface"
type = "forbidden"
source_modules = ["goldfish.jobs", "goldfish.workspace.manager", "goldfish.pipeline"]
forbidden_modules = ["goldfish.server", "goldfish.server_tools"]

[[tool.importlinter.contracts]]
name = "protocols-no-adapters"
type = "forbidden"
source_modules = ["goldfish.cloud.protocols", "goldfish.cloud.contracts"]
forbidden_modules = ["goldfish.cloud.adapters"]

[[tool.importlinter.contracts]]
name = "infra-no-api"
type = "forbidden"
source_modules = ["goldfish.db", "goldfish.cloud.adapters", "goldfish.infra"]
forbidden_modules = ["goldfish.server", "goldfish.server_tools"]

[[tool.importlinter.contracts]]
name = "only-factory-imports-adapters"
type = "protected"
protected_modules = ["goldfish.cloud.adapters"]
allowed_importers = ["goldfish.cloud.factory"]
