[package]
name = "goldfish-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
ndarray-npy = "0.8"
csv = "1.1"
polars = { version = "0.36", features = ["lazy", "csv"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
walkdir = "2.3"
thiserror = "1.0"
once_cell = "1.10"
log = "0.4"
env_logger = "0.10"
tempfile = "3.3"
zip = "0.6"

[dev-dependencies]
serial_test = "3.0"